--- a/android/build.gradle
+++ b/android/build.gradle
@@ -68,8 +68,8 @@ buildscript {
         }
     }
     dependencies {
-        classpath('com.android.tools.build:gradle:4.2.1')
-        classpath("de.undercouch:gradle-download-task:4.0.4")
+        classpath('com.android.tools.build:gradle:4.2.2')
+        classpath("de.undercouch:gradle-download-task:4.1.2")
     }
 }
 
@@ -313,7 +313,7 @@ def findNdkBuildFullPath() {
             return new File(ndkDir, getNdkBuildName()).getAbsolutePath()
         }
     }
-    
+
     def Properties properties = new Properties()
     if (rootProject.file("local.properties").exists()) {
         properties.load(project.rootProject.file("local.properties").newDataInputStream())
@@ -434,7 +434,6 @@ task packageNdkLibs(type: Copy) {
 }
 
 repositories {
-    jcenter()
     mavenCentral()
     mavenLocal()
     maven {
@@ -446,6 +445,14 @@ repositories {
         url "$rootDir/../node_modules/jsc-android/dist"
     }
     google()
+    // FIXME jcenter is deprecated and will be removed soon, however some modules still doesn't migrate to maven central
+    jcenter() {
+        content {
+            includeModule("com.facebook.fbjni", "fbjni-java-only")
+            includeModule("com.facebook.yoga", "proguard-annotations")
+
+        }
+    }
 }
 
 dependencies {
